unwrap screen and few fixes in crucible dashboard

--- a/src/assets/scss/_cards.scss
+++ b/src/assets/scss/_cards.scss
@@ -255,7 +255,7 @@ $cardSecondary: #242b35;
 
 .card-manage {
   // margin-right: auto;
-  max-width: 650px !important;
+  // max-width: 650px !important;
   margin: 0 auto;
   @media screen and (max-width: 1439px) {
     // margin-left: 10vw;
