--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -19,7 +19,7 @@
           padding-top: 0;
           padding-right: 16rem;
           .f-container {
-            max-width: 700px;
+            // max-width: 700px;
           }
         }
         &.crucible-dashboard {
